--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
 Suggests: 
     testthat (>= 2.0.0),
     knitr (>= 1.20),
-    rmarkdown (>= 1.10)
+    rmarkdown (>= 1.10),
+    spelling
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
