--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,6 @@ pandoc: '2.3'
 pkgdown: 1.1.0
 pkgdown_sha: ~
 articles:
-  empiricalillustration: empiricalillustration.html
+  illustrationBONDS: illustrationBONDS.html
+  illustrationSNP: illustrationSNP.html
 
