--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,19 @@
 Type: Package
 Package: psymonitor
-Title: Real Time Monitoring of Bubbles and Crisis with R
+Title: psymonitor: Real Time Monitoring of Bubbles and Crisis with R
 Version: 0.0.0.9000
 Authors@R: c(
     person("Peter", "C.B. Phillips", role = c("aut")),
     person("Shuping", "Shi", role = c("aut")),
     person("Itamar", "Caspi", email = "caspi.itamar@gmail.com", role = c("aut", "cre"))
     )
-Description: TBA
+Description: The *psymonitor* package provides an R implementation of the popular real-time
+             monitoring strategy proposed by Phillips, Shi and Yu (2015a,b;PSY), along with a new 
+             bootstrap procedure designed to mitigate the potential impact of heteroskedasticity and
+             to effect family-wise size control in recursive testing algorithms (Phillips and Shi,
+             forthcoming). This methodology has been shown effective for bubble and crisis detection 
+             (PSY, 2015a,b; Phillips and Shi, 2017) and is now widely used by academic researchers,
+             central bank economists, and fiscal regulators.
 License: GPL-3
 Language: en-US
 URL: https://github.com/itamarcaspi/psymonitor
@@ -17,7 +23,8 @@ Depends:
 Imports: 
     doParallel (>= 1.0.11),
     parallel,
-    foreach (>= 1.4.4)
+    foreach (>= 1.4.4),
+    magrittr
 Suggests: 
     testthat (>= 2.0.0),
     knitr (>= 1.20),
