--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     doParallel (>= 1.0.11),
     parallel,
     foreach (>= 1.4.4),
+    RcppEigen (>= 0.3.3.4.0),
     magrittr
 Suggests: 
     testthat (>= 2.0.0),
