edited travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,18 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+# Sample .travis.yml for R projects
 
-language: R
+language: r
+
+r:
+  - oldrel
+  - release
+  - devel
+
+warnings_are_errors: true
 sudo: false
 cache: packages
+
+notifications:
+  email:
+    on_success: true
+    on_failure: true
+
