--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ import(foreach)
 import(parallel)
 importFrom(RcppEigen,fastLmPure)
 importFrom(magrittr,"%>%")
+importFrom(stats,quantile)
 importFrom(stats,rnorm)
