--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: psymonitor
-Title: psymonitor: Real Time Monitoring of Bubbles and Crisis
+Title: Real Time Monitoring of Asset Markets: Bubbles and Crisis
 Version: 0.0.0.9000
 Authors@R: 
     c(person(given = "Peter",
@@ -13,15 +13,11 @@ Authors@R:
              family = "Caspi",
              role = c("aut", "cre"),
              email = "caspi.itamar@gmail.com"))
-Description: The *psymonitor* package provides an R
-    implementation of the popular real-time monitoring strategy proposed
+Description: Apply the popular real-time monitoring strategy proposed
     by Phillips, Shi and Yu (2015a,b;PSY), along with a new bootstrap
     procedure designed to mitigate the potential impact of
     heteroskedasticity and to effect family-wise size control in recursive
-    testing algorithms (Phillips and Shi, forthcoming). This methodology
-    has been shown effective for bubble and crisis detection (PSY,
-    2015a,b; Phillips and Shi, 2017) and is now widely used by academic
-    researchers, central bank economists, and fiscal regulators.
+    testing algorithms (Phillips and Shi, forthcoming).
 License: GPL-3
 URL: https://github.com/itamarcaspi/psymonitor
 BugReports: https://github.com/itamarcaspi/psymonitor/issues
