created cvPSYmc and cvPSYwmboot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(ADF)
 export(PSY)
 export(cvPSY)
+export(cvPSYmc)
+export(cvPSYwmboot)
 export(disp)
 export(locate)
 export(wmboot)
