--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,16 +26,16 @@ Depends:
 Imports: 
     doParallel (>= 1.0.11),
     foreach (>= 1.4.4),
-    magrittr,
-    parallel,
+    magrittr (>= 1.5),
+    parallel (>= 3.5.0),
     RcppEigen (>= 0.3.3.4.0)
 Suggests: 
     knitr (>= 1.20),
-    lubridate,
+    lubridate (>= 1.7.4),
     rmarkdown (>= 1.10),
-    spelling,
+    spelling (>= 1.2),
     testthat (>= 2.0.0),
-    tidyverse
+    tidyverse (>= 1.2.1)
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
