--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Imports:
     doParallel (>= 1.0.11),
     foreach (>= 1.4.4),
     magrittr (>= 1.5),
-    parallel (>= 3.5.0),
+    parallel
 Suggests: 
     knitr (>= 1.20),
     lubridate (>= 1.7.4),
