--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,17 +24,17 @@ BugReports: https://github.com/itamarcaspi/psymonitor/issues
 Depends: 
     R (>= 3.2.0)
 Imports: 
-    doParallel (>= 1.0.11),
-    foreach (>= 1.4.4),
-    magrittr (>= 1.5),
+    doParallel,
+    foreach,
+    magrittr,
     parallel
 Suggests: 
-    knitr (>= 1.20),
-    lubridate (>= 1.7.4),
-    rmarkdown (>= 1.10),
-    spelling (>= 1.2),
-    testthat (>= 2.0.0),
-    tidyverse (>= 1.2.1)
+    knitr,
+    lubridate,
+    rmarkdown,
+    spelling,
+    testthat,
+    tidyverse
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
