--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Authors@R:
              role = c("aut", "cre"),
              email = "caspi.itamar@gmail.com"))
 Description: Apply the popular real-time monitoring strategy
-    proposed by Phillips, Shi and Yu (2015a,b;PSY), along with a new
+    proposed by Phillips, Shi and Yu (2015a,b;PSY) <doi:10.1111/iere.12132>, <doi:10.1111/iere.12131>, along with a new
     bootstrap procedure designed to mitigate the potential impact of
     heteroskedasticity and to effect family-wise size control in recursive
     testing algorithms (Phillips and Shi, forthcoming).
