--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: psymonitor
 Title: Real Time Monitoring of Asset Markets: Bubbles and Crisis
-Version: 0.0.2.9000
+Version: 0.0.3
 Authors@R: 
     c(person(given = "Peter",
              family = "C.B. Phillips",
@@ -34,7 +34,7 @@ Suggests:
     lubridate,
     rmarkdown,
     spelling,
-    testthat,
+    testthat
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
